# tempo

./: .gitignore  AGENTS.md  Cargo.toml  METADATA_ENRICHMENT_PRD.md  ONLINE_METADATA_ENRICHMENT.md  README.md  TEMPO_BACKEND_PRD.md  build.rs
.github/workflows/: rust.yml
src/: catalog.rs  equalizer.rs  hypr.rs  lib.rs  library.rs  main.rs  metadata_worker.rs  perf.rs  playback.rs  single_instance.rs  snapshot.rs  tray.rs  updates.rs
src/app/: analytics.rs  artwork.rs  browse_grids.rs  charts.rs  equalizer_panel.rs  history.rs  hotkeys_panel.rs  library_state.rs  library_view.rs  lifecycle.rs  liked.rs  menu.rs  mod.rs  mpris_art.rs  player.rs  search.rs  settings.rs  sidebar.rs  table.rs  text_input.rs  theme.rs  tooltip.rs  tray_panel.rs  update_state.rs
src/app/player/: entity.rs  mini.rs  mod.rs  render.rs
src/app/player/visualizers/: dancing_line.rs  frequency_bars.rs  mod.rs
