[package]
name = "tempo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cpal = "0.17.3"
gpui = "0.2.2"
lofty = "0.24.0"
notify = "8.2.0"
rodio = "0.22.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
