[package]
name = "tempo"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "tempo"
path = "src/main.rs"

# Companion helper that performs the actual self-update on Linux:
# the main `tempo` binary downloads the new release, spawns this
# helper, and exits. The helper waits for the parent PID to die,
# replaces the executable on disk, and re-launches `tempo`. It is
# intentionally tiny so it has only `anyhow` as a dependency from
# the workspace.
[[bin]]
name = "tempo-updater"
path = "src/bin/tempo_updater.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
cpal = "0.17.3"
gpui = "0.2.2"
lofty = "0.24.0"
notify = "8.2.0"
rodio = "0.22.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10"
walkdir = "2.5.0"
crossbeam-channel = "0.5.15"
rayon = "1.12.0"
mpris-server = "0.10"
async-io = "2"
futures-util = "0.3"
rustfft = "6.4.1"

# Linux StatusNotifierItem (system tray) implementation. ksni's
# `async-io` feature shares the `async-io` runtime mpris-server
# already pulls in, so the marginal cost is small. Gated to
# Linux/BSD because Windows and macOS need fundamentally different
# native paths (Shell_NotifyIconW / NSStatusItem) — see follow-up.
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["async-io"] }

# evdev is Linux-only (reads /dev/input/event*). On macOS/Windows the
# hotkey module compiles a stub; see src/hotkeys.rs.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

[dev-dependencies]
tempfile = "3.27.0"
